Added static folder and first css file to the greet.html template

--- a/lecture3/hello/templates/hello/greet.html
+++ b/lecture3/hello/templates/hello/greet.html
@@ -1,13 +1,14 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'hello/hello_styles.css' %}">
 </head>
 <body>
     <h1>This is a header!</h1>
     <p>The name requested was: {{ html_name }}</p>
+    <p>Your lucky number is: {{ html_lucky_number }}</p>
 </body>
 </html>
